test/type-checking/good/ImplicitCast.cc
double foo(int x, double d)
{
  return x * d;
}

string buz(int x)
{
  return "Count: " + x;
}
