test/type-checking/bad/IncrementString.cc
int main()
{
  string x = "hello";
  ++x;

  return 0;
}
